--- a/inference/twitter.ipynb
+++ b/inference/twitter.ipynb
@@ -52,8 +52,8 @@
    "outputs": [],
    "source": [
     "def pick_topic():\n",
-    "    topic = random.choice(['evolution', 'abortion', 'gun control', 'gay marriage', 'existence of god', 'healthcare'\n",
-    "                          , 'climate change', 'communism', '#christian'])\n",
+    "    topic = random.choice(['evolution', 'gun control', 'existence of god', 'healthcare'\n",
+    "                          , 'climate change', 'communism'])\n",
     "    return topic\n",
     "\n",
     "def search(topic, api):\n",
